fix: display empty state for folders on collapsed state [WPB-10547]

--- a/src/style/common/context.less
+++ b/src/style/common/context.less
@@ -97,4 +97,14 @@
   &__icon {
     margin-right: 8px;
   }
+  &__placeholder {
+    position: fixed;
+    width: 8.75rem;
+    padding: 1rem 1.25rem;
+    border-radius: 0.75rem;
+    background-color: var(--modal-bg);
+    box-shadow:
+      0 0 1px 0 fade(#000, 8%),
+      0 8px 24px 0 fade(#000, 16%);
+  }
 }
